<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="_14_CONSUM" Id="{493a8278-4fd9-4b7e-8809-a9c4cb7b6dd0}">
    <Declaration><![CDATA[TYPE _14_CONSUM :
STRUCT
(*+++++++++++++++++++++++++++++++++++++++*)
(*HARD*)
(*+++++++++++++++++++++++++++++++++++++++*)
	s500_Amperimetre	:dutAin;


	
(*+++++++++++++++++++++++++++++++++++++++*)
(*READINGS*)
(*+++++++++++++++++++++++++++++++++++++++*)

	rLit_Batch		:REAL;		(*Litros de la barcada*)
	rKw_Batch		:REAL; 		(*Kw de la Barcada*)
	rKgStm_Batch	:REAL;		(*Kg de Vapor de la barcada*)
	rAmp			:REAL;		//Corriente de entrada


(*+++++++++++++++++++++++++++++++++++++++*)
(*CONFIG*)
(*+++++++++++++++++++++++++++++++++++++++*)




	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>